examples/type_system/failing/54_strict_any_param_rejected.flx
public fn id(x: Any) -> Int {
    1
}

fn main() -> Unit {
}
